--- a/todo
+++ b/todo
@@ -1,9 +1,19 @@
-- 동일 이름 걸러내기
-- 로케이션 지정 명령어
-- 팀 갯수 최대 8개로 지정
-- 저장 시 로케이션 null인 경우(로케이션 설정 안한 경우) 처리
-- UX 개선하기
+- 동일 이름 걸러내기 -> validate() 메소드에서 동일 이름 팀/채널 있나 검색 (o)
+
+- 로케이션 지정 명령어 -> /t ts 채널이름 팀이름 -> 팀 스폰 설정 /t tc 채널이름 팀이름 -> 팀 코어 설정 (o)
+                          /t cl 채널이름 -> 채널 로비 /t cw 채널이름 -> 채널 대기실 (o)
+
+- 팀/채널 갯수 최대 8개로 지정 -> 채널 리스트 인벤토리 한 줄로 바꾸기 (o)
+- 채널 리스트/팀 리스트 관련 핸들러 수정하기 (o)
+
+- 저장/로드 시 로케이션 null인 경우(로케이션 설정 안한 경우) 처리 -> 저장시 null인 경우 저장 x (o)
+-> 로드 시 null인 경우 null (o)
+
+- UX 개선하기 -> 팀 리스트에서 뒤로 가기 버튼 만들기 -> 채널 메뉴로 이동
+
 - 채널 각각 메뉴 -> 오른쪽 아이콘 클릭하면 Lobby LOC, WAIT LOC 갈 수 있게 하기
 - 팀 리스트 -> 팀 아이콘 클릭하면 팀 Core LOC, Spawn LOC 갈 수 있게 하기
-- 플레이어 메시지 콘피그
+
+- 플레이어 메시지 콘피그 saveResoure 지정
+
 - FAWE 알아보기
