--- a/todo
+++ b/todo
@@ -9,7 +9,7 @@
 - 저장/로드 시 로케이션 null인 경우(로케이션 설정 안한 경우) 처리 -> 저장시 null인 경우 저장 x (o)
 -> 로드 시 null인 경우 null (o)
 
-- UX 개선하기 -> 팀 리스트에서 뒤로 가기 버튼 만들기 -> 채널 메뉴로 이동
+- UX 개선하기 -> 팀 리스트에서 뒤로 가기 버튼 만들기 -> 채널 메뉴로 이동 (o)
 
 - 채널 각각 메뉴 -> 오른쪽 아이콘 클릭하면 Lobby LOC, WAIT LOC 갈 수 있게 하기
 - 팀 리스트 -> 팀 아이콘 클릭하면 팀 Core LOC, Spawn LOC 갈 수 있게 하기
